--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <!--Progress dialog text-->
     <string name="txt_loading">Učitavanje…</string>
 
+    <!--Tab titles-->
+    <string name="txt_list">LISTA</string>
+    <string name="txt_map">MAPA</string>
+
+
     <string name="txt_image_description">Logo</string>
     <string name="txt_store_description">Opis artikla:</string>
 </resources>
