--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <!--Tab titles-->
     <string name="txt_list">LISTA</string>
     <string name="txt_map">MAPA</string>
-
+    <!--descriptionACtivity strings-->
+    <string name="txt_name_address_city">%1$s, %2$s, %3$s</string>
 
     <string name="txt_image_description">Logo</string>
     <string name="txt_store_description">Opis artikla:</string>
